# freelance_shield

./: .gitignore  Anchor.toml  DEPLOY_SOLANA.md  GROWTH_STRATEGY.md  HACKATHON_SUBMISSION.md  MARKETING.md  README.md  SETUP.md  design.html  docker-compose.yml  railway.json  response.json
backend/: .env.example  Procfile  alembic.ini  nixpacks.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 03ea559c9f33_widen_currency_column.py  0931292a03e5_initial_schema.py  43f52db6418e_add_projects_and_proposals.py  44bbbe0862ad_add_auto_release_fields.py  a12ee730c52f_add_waitlist.py
backend/app/: config.py  database.py  main.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  contract.py  deliverable.py  dispute.py  milestone.py  payment.py  project.py  proposal.py  user.py  waitlist.py
backend/app/routers/: auth.py  contracts.py  cron.py  disputes.py  milestones.py  payments.py  projects.py  proposals.py  waitlist.py  webhooks.py
backend/app/schemas/: contract.py  dispute.py  milestone.py  payment.py  project.py  proposal.py  user.py
backend/app/services/: email_service.py  payment_service.py  (+1 more)
frontend/: package-lock.json  package.json
programs/freelance-shield/: Cargo.toml
programs/freelance-shield/src/: error.rs  lib.rs  state.rs
programs/freelance-shield/src/instructions/: accept_contract.rs  approve_milestone.rs  auto_release.rs  create_contract.rs  dispute.rs  fund_milestone.rs  init_milestone.rs  mod.rs  release_milestone.rs  submit_milestone.rs  trust_score.rs
tests/: freelance-shield.ts
(+35 files in other folders)
