[package]
name = "freelance-shield"
version = "0.1.0"
description = "Milestone-based escrow for freelancers on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "freelance_shield"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31"
anchor-spl = "0.31"
